[package]
name = "object-proxy-rs"
version = "0.1.0"
authors = ["maa123 <maa123.lq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"

config = "0.11.0"

rusoto_s3 = "0.48.0"
rusoto_core = "0.46.0"

tokio = { version = "1.0", features = ["io-util"] }
