[package]
name = "object-proxy-rs"
version = "0.1.0"
authors = ["maa123 <maa123.lq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"

config = "0.15.13"

rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"

tokio = { version = "1.46.1", features = ["io-util"] }
